[package]
name = "attestation-proxy"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
regex = "1"
jsonwebtoken = "9"
percent-encoding = "2"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive", "serde"] }
thiserror = "2"
aes-gcm = "0.10"
rand = "0.8"
ed25519-dalek = "2"
bip39 = { version = "2", default-features = false, features = ["std"] }
libc = "0.2"
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }
uuid = { version = "1", features = ["v4", "serde"] }
x509-cert = "0.2"
